temporal-verifier/tests/examples/fail/sorts/redeclared_def.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s
immutable f(bool): s
def f(x: s) -> bool {
    true
}
